--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,26 @@
   "action-phase-scoring": "Action phase scoring:",
   "allow-town-scoring-1st-round-description": "If unchecked, the scoring tile that gives 5 points when funding a town will not appear in the first round.",
   "allow-town-scoring-1st-round": "Allow action phase scoring for towns in first round.",
+  "artifact-pick-mode.as-num-players-less-one": "As many as players less one",
+  "artifact-pick-mode.as-num-players": "As many as players",
+  "artifact-pick-mode.assign-to-faction": "Assign an artifact to each faction",
+  "artifact-pick-mode.none": "None",
+  "artifact-pick-mode": "Artifacts:",
+  "artifact.amulet-air": "Amulet of Air",
+  "artifact.amulet-earth": "Amulet of Earth",
+  "artifact.amulet-fire": "Amulet of Fire",
+  "artifact.amulet-water": "Amulet of Water",
+  "artifact.balance-trades": "Balance of all Trades",
+  "artifact.boots-speed": "Boots of Speed",
+  "artifact.case-knowledge": "Case of Knowledge",
+  "artifact.golden-chest": "Golden Chest",
+  "artifact.grimoire": "Grimoire",
+  "artifact.holy-staff": "Holy Staff",
+  "artifact.mirror-wisdom": "Mirror of Wisdom",
+  "artifact.orb-power": "Orb of Power",
+  "artifact.pendant-strength": "Pendant of Strength",
+  "artifact.ring-protection": "Ring of Protection",
+  "artifacts": "Artifacts",
   "bonus-card.6-coins": "6 coins",
   "bonus-card.cult-track-and-coins": "Advance 1 in a cult track and 2 coins",
   "bonus-card.move-ships-and-ship": "Move ships and and 1 ship",
@@ -136,5 +156,6 @@
   "scoring-tiles": "Scoring tiles",
   "settings": "Settings",
   "setup": "Setup",
-  "version": "Version:"
+  "version": "Version:",
+  "with-artifact": "with Artifact \"{{artifact}}\""
 }
