Fix bonus cards descriptions

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,19 +32,19 @@
   "artifact.pendant-strength": "Pendant of Strength",
   "artifact.ring-protection": "Ring of Protection",
   "artifacts": "Artifacts",
-  "bonus-card.6-coins": "6 coins",
-  "bonus-card.cult-track-and-coins": "Advance 1 in a cult track and 2 coins",
-  "bonus-card.move-ships-and-ship": "Move ships and and 1 ship",
-  "bonus-card.points-3rd-building-and-workers": "4 points for each 3<sup>rd</sup> level building and 2 workers",
-  "bonus-card.points-dwelling-and-coins": "1 point for each Dwelling and 2 coins",
-  "bonus-card.points-shipping-and-power": "3 points for shipping upgrades and 3 power",
-  "bonus-card.points-ships-coind-and-worker": "3 points for each ship, 1 coin and 1 worker",
-  "bonus-card.points-trade-and-ship": "1 point for each trade and 1 ship",
-  "bonus-card.points-trading-house-and-worker": "2 points for each Trading House and 1 worker",
-  "bonus-card.power-and-shipping": "3 power and temporary shipping upgrade",
-  "bonus-card.priest": "Priest",
-  "bonus-card.spade-and-coins": "1 spade and 2 coins",
-  "bonus-card.worker-and-power": "1 additional worker and 3 power",
+  "bonus-card.6-coins": "Get 6 coins",
+  "bonus-card.cult-track-and-coins": "Special action: advance 1 in any cult track. Get 4 coins",
+  "bonus-card.move-ships-and-ship": "Special action: move ships. Get 1 ship",
+  "bonus-card.points-3rd-building-and-workers": "At the end of the round, 4 points for each 3<sup>rd</sup> level building. Get 2 workers",
+  "bonus-card.points-dwelling-and-coins": "At the end of the round, 1 point for each Dwelling. Get 2 coins",
+  "bonus-card.points-shipping-and-power": "At the end of the round, 3 points for shipping upgrades. Get 3 power",
+  "bonus-card.points-ships-coind-and-worker": "At the end of the round, 3 points for each ship. Get 1 coin and 1 worker",
+  "bonus-card.points-trade-and-ship": "1 point for each trade. Special action: 1 ship",
+  "bonus-card.points-trading-house-and-worker": "At the end of the round, 2 points for each Trading House. Get 1 worker",
+  "bonus-card.power-and-shipping": "Get 3 power. Temporary shipping upgrade",
+  "bonus-card.priest": "Get 1 priest",
+  "bonus-card.spade-and-coins": "Special action: 1 spade. Get 2 coins",
+  "bonus-card.worker-and-power": "Get 1 worker and 3 power",
   "bonus-cards-description": "{{num}} bonus cards to pick randomly from.",
   "bonus-cards-invalid": "As many bonus cards as players + 3 are necessary. Select more bonus cards.",
   "bonus-cards": "Bonus cards",
