Option to prevent triple action phase scoring

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,8 +10,6 @@
   "action-phase-scoring.trade": "2 victory points when resolving a trade.",
   "action-phase-scoring.trading-house": "3 victory points when building a trading house.",
   "action-phase-scoring": "Action phase scoring:",
-  "allow-town-scoring-1st-round-description": "If unchecked, the scoring tile that gives 5 points when funding a town will not appear in the first round.",
-  "allow-town-scoring-1st-round": "Allow action phase scoring for towns in first round.",
   "artifact-pick-mode.as-num-players-less-one": "As many as players less one",
   "artifact-pick-mode.as-num-players": "As many as players",
   "artifact-pick-mode.assign-to-faction": "Assign an artifact to each faction",
@@ -137,6 +135,10 @@
   "predefined-profile.fire-ice-and-mini-expansion": "Fire & Ice + Mini expansion (Official)",
   "predefined-profile.fire-ice": "Fire & Ice (Official)",
   "predefined-profile.power-coming": "Power is coming, with basic game set",
+  "prevent-town-scoring-1st-round-description": "If checked, the scoring tile that gives 5 points when funding a town cannot appear in the first round.",
+  "prevent-town-scoring-1st-round": "Prevent action phase scoring for towns in first round.",
+  "prevent-triple-action-phase-scoring-description": "If checked, there cannot be 3 scoring tiles that give points for the same type of action (useful when combining scoring tiles of multiple expansions).",
+  "prevent-triple-action-phase-scoring": "Prevent triple action phase scoring of the same type.",
   "profile": "Profile",
   "reward-condition.cult-air": "for each {{count}} spaces in the cult of air",
   "reward-condition.cult-earth": "for each {{count}} spaces in the cult of earth",
